2005-12-20 Niklas Knutsson  <nq@altern.org>

	* Warn about denominators assumed non-zero option

2005-12-19 Niklas Knutsson  <nq@altern.org>

	* Various fixes and enhancements
	* Update Swedish translation

2005-12-14 Niklas Knutsson  <nq@altern.org>

	* Fix ln(e^x)
	* Isolate x in log(x) for inequalities
	* Factorize x^2-y^2 and x^3-y^3

2005-12-13 Niklas Knutsson  <nq@altern.org>

	* Isolate x fixes
	* Fix merging of common factor with multiplication

2005-12-12 Niklas Knutsson  <nq@altern.org>

	* Assume that simple unit relations do not negate	
	* Fix ?+(+infinity)

2005-12-11 Niklas Knutsson  <nq@altern.org>

	* Fix non-commutative multiplication (multiplication with possible matrices)

2005-12-09 Niklas Knutsson  <nq@altern.org>

	* Fix isolate x with "x^2 > -5" and similar
	* Do not calculate y in "x && y" and "x || y" if x is false or true, respectively

2005-12-08 Niklas Knutsson  <nq@altern.org>

	* New assumption type "non-matrix" for unknowns with commutative multiplication
	* Finish isolate x / solve changes

2005-12-06 Niklas Knutsson  <nq@altern.org>

	* Isolate x and solve fixes
	* Fix matrix multiplication

2005-12-04 Niklas Knutsson  <nq@altern.org>

	* Isolate x updates
	* Put AND within OR (to get nicer inequalities)

2005-12-03 Niklas Knutsson  <nq@altern.org>

	* Isolate x using AND and OR instead of vector
	* Enhanced inequalities handling in isolate x
	* Simplify AND and OR with comparisons (ex x < 5 && x < 3 = x < 3)
	* Display "x < 3 && x > 1" as "1 < x < 3"

2005-12-01 Niklas Knutsson  <nq@altern.org>

	* Incorporate ginac sqrfree updates between version 1.2.3 and 1.3.3
	* Assorted fixes

2005-11-30 Niklas Knutsson  <nq@altern.org>

	* Only treat e as E if preceded by number
	* Do not test float number for infinite series
	* Check factorized numerators and denominators for negative powers

2005-11-29 Niklas Knutsson  <nq@altern.org>

	* Parse -x/y as (-x)/y instead of -(x/y)