@@ -190,6 +190,10 @@ DECLARE_BUILTIN_FUNCTION(MaxFunction)
 DECLARE_BUILTIN_FUNCTION(ModeFunction)
 DECLARE_BUILTIN_FUNCTION_RPI(RandFunction)
 
+DECLARE_BUILTIN_FUNCTION(ISODateFunction)
+DECLARE_BUILTIN_FUNCTION(LocalDateFunction)
+DECLARE_BUILTIN_FUNCTION(TimestampFunction)
+DECLARE_BUILTIN_FUNCTION(TimestampToDateFunction)
 DECLARE_BUILTIN_FUNCTION(DaysFunction)
 DECLARE_BUILTIN_FUNCTION(YearFracFunction)
 DECLARE_BUILTIN_FUNCTION(WeekFunction)
